--- a/training/oracleVM.textile
+++ b/training/oracleVM.textile
@@ -8,50 +8,56 @@ p(toc). Table of Contents
 
 h1. XM Commands
 
-List which virtual machines are running right now.
+* List which virtual machines are running right now.
 
 bc. # xm list
 
-Start the vm. By convention we will always have a file called vm.cfg
+* Start the vm. By convention we will always have a file called vm.cfg
 
 bc. # xm create vm.cfg
 
-Kill the power to vm: vm01, i.e. a hard shutdown
+* Kill the power to vm: vm01, i.e. a hard shutdown
 
 bc. # xm destroy vm01
 
-Monitors a host and its domains in real time# xm top 
+* Monitors a host and its domains in real time
 
-Send the vm: vm01 the shutdown command, like doing a shutdown inside the vm
+bc. # xm top 
+
+* Send the vm: vm01 the shutdown command, like doing a shutdown inside the vm
 
 bc. # xm shutdown vm01
 
-Current status of the guest operating system is written to disk and removed from system memory
+* Current status of the guest operating system is written to disk and removed from system memory
 
 bc. # xm suspend vm01
 
-restore vm01 (any time including after a host system reboot)
+* restore vm01 (any time including after a host system reboot)
 
 bc. # xm resume vm01
 
-Not Finished:
+* Not Finished:
+
 add a disk to a running vm: xm block-attach <Domain Id> <Backend Device> <Frontend Device> <Mode>. Domain Id is got from xm list command under the id column, 
 
 bc. # xm block-attach 3 phy:/dev/sr0 /dev/xvda2 r
 
-Split / Join files
+* Split / Join files
+
 Sometime the files are too big to put on FAT32 thumbdrives. Use the split and cat commands here:
 
 Split the file system.img into 3Gig chunks
 
 bc. # split --bytes=3000m system.img
 
-Join up the files system.img.part1, system.img.part2, etc... into the file system.img
+* Join up the files system.img.part1, system.img.part2, etc... into the file system.img
 
 bc. # cat system.img.part* > system.img
 
-Make an extra Linux file system for your VM
+* Make an extra Linux file system for your VM
+
 Make a blank file 2 gigs large named stellent.img that will serve as our new disk
+
 bc. # dd if=/dev/zero of=stellent.img bs=1M count=2048
 
 Edit the configuration file (/etc/xen/vm03), like below, adding the second line, notice xvda goes to xvdb
@@ -65,44 +71,57 @@ disk = [ 'file:/OVS/running_pool/ucm1/system.img,hda,w','file:/OVS/running_pool/
 The following instructions came from the following link, use it as a reference if these instructions don't make sense
 http://www.linuxhomenetworking.com/wiki/index.php/Quick_HOWTO_:_Ch27_:_Expanding_Disk_Capacity#Expanding_Partitions_With_LVM
 
-Here we created a new device, /dev/xvdb. Now we start up the vm and run fdisk 
+* Here we created a new device, /dev/xvdb. Now we start up the vm and run fdisk 
+
 bc. # fdisk /dev/xvdb
 
 You'll get some error messages saying you don't have a valid partition table. Create a new partition, 'n', primary = 'p', partition number = '1', default first and last cylinders.
 
 List this partition table 'p' now and notice the Id type is 83 or something. Change this to 8e. 't', '8e'. List the partition table 'p', again, notice the new Id type is 8e. Save partition table 'w'.
 
-Create a physical volume from this device
+* Create a physical volume from this device
+
 bc. # pvcreate /dev/xvdb1
 
-Create the logical volume group from the physical device
+* Create the logical volume group from the physical device
+
 bc. # vgcreate lvm-oracledb /dev/xvdb1
 
-Create the logical volume using 100% of the free space in the logical group lvm-oracledb
+* Create the logical volume using 100% of the free space in the logical group lvm-oracledb
+
 bc. # lvcreate -l 100%FREE lvm-oracledb -n lvm0
 
-Format the file system
+* Format the file system
+
 bc. # mkfs -t ext3 /dev/lvm-oracledb/lvm0 
 
-Create a mount point
+* Create a mount point
+
 bc. # mkdir /oracledb
 
-Add the following to /etc/fstab to automatically mount the volume when the computer starts up
-/dev/lvm-oracledb/lvm0 /oracledb ext3 defaults 1 2
-Mount the volume
+* Add the following to /etc/fstab to automatically mount the volume when the computer starts up
+
+bc. /dev/lvm-oracledb/lvm0 /oracledb ext3 defaults 1 2
+
+* Mount the volume
+
 bc. # mount -a
 
 DONE!!!
 
-Remove a Disk (LVM)
+* Remove a Disk (LVM)
+
 Remove /etc/fstab entry
-[root@vl-ucm1 ~]# vi /etc/fstab
+
+bc. [root@vl-ucm1 ~]# vi /etc/fstab
 
 Unmount the device, get device name with: lvdisplay
+
 bc. # umount /dev/lvm-stellent/lvm0
 
 OR
 
+bc. 
 [root@vl-ucm1 /]# ls /u01
 downloads lost+found oracle
 [root@vl-ucm1 /]# umount /u01
@@ -110,10 +129,14 @@ downloads lost+found oracle
 [root@vl-ucm1 /]# 
 
 If you get: 
+
+bc. 
 [root@vl-ucm1 /]# umount /dev/lvm-stellent/lvm0
 umount: /u01: device is busy
 
 Find out what is using the device with: 
+
+bc. 
 [root@vl-ucm1 /]# fuser -m /dev/lvm-stellent/lvm0
 /dev/lvm-stellent/lvm0: 3557m 3620m 3621m 3622m 3623m 3624m 3625m 3626m 3627m
 [root@vl-ucm1 /]# ps auxw| grep 3557
@@ -122,67 +145,87 @@ root 3557 0.0 0.5 10856 3104 ? Ss 10:55 0:00 /usr/sbin/httpd
 Stopping httpd: [ OK ]
 [root@vl-ucm1 /]# umount /dev/lvm-stellent/lvm0
 [root@vl-ucm1 /]# df -h
+
 And you should no longer see the disk with 'df'
 
 Remove any entries from /etc/httpd/conf/httpd.conf that refer to this disk.
 
 use lvremove to remove the logical volume
+
+bc. 
 [root@vl-ucm1 /]# lvremove /dev/lvm-stellent/lvm0
 Do you really want to remove active logical volume "lvm0"? [y/n]: y
 Logical volume "lvm0" successfully removed
 
 use lgdisplay and lgremove to remove logical group
+
+bc. 
 [root@vl-ucm1 /]# vgremove lvm-stellent
 Volume group "lvm-stellent" successfully removed
 
 use pvdisplay and pvremove to remove physical volume
+
+bc. 
 [root@vl-ucm1 /]# pvremove /dev/hdb1
 Labels on physical volume "/dev/hdb1" successfully wiped
 
 remove partition with fdisk /dev/hdb, 'd', enter, 'w' = write partition and exit
+
+bc. 
 # fdisk /dev/hdb
 
 Remove the disk entry from the vm.cfg file, and restart the vm.
 
+* Shrink a LVM
 
-Shrink a LVM
 Just create a new disk, copy over contents and delete old volume.
-
-
 
 open a terminal window
 
-==> SSH into the two Virtual Machine Servers
-ssh root@del & ssh root@x61
+* SSH into the two Virtual Machine Servers
 
-==> See what vm's are available by looking in the /OVS/running_pool directories
-cd /OVS/running_pool; ls
+bc. ssh root@del & ssh root@x61
 
-==> See what VM's are currently running:
-xm list
+* See what vm's are available by looking in the /OVS/running_pool directories
 
-==> Start a VM
-	cd /OVS/running_pool/[vm_name]
-	xm create vm.cfg
+bc. cd /OVS/running_pool; ls
+
+* See what VM's are currently running:
+
+bc. xm list
+
+* Start a VM
+
+bc. 
+cd /OVS/running_pool/[vm_name]
+xm create vm.cfg
+
 example:
-	cd /OVS/running_pool/proddb
-	xm create vm.cfg
+
+bc. 
+cd /OVS/running_pool/proddb
+xm create vm.cfg
 	
-==> Find out hostnames by looking at dns server
-	ssh root@dns (password = ovsroot)
-	cat ftzone
+* Find out hostnames by looking at dns server
 
-==> Log into the VM itself
-	ssh root@proddb (password = ovsroot)
+bc. ssh root@dns (password = ovsroot)
+cat ftzone
+
+* Log into the VM itself
+
+bc. ssh root@proddb (password = ovsroot)
 	
-==> Shutdown a vm
-	xm shutdown [vm_name]
-		example:
-	xm shutdown proddb
+* Shutdown a vm
 
-==> VM configuration file:
-	/OVS/running_pool/[vm_name]/vm.cfg
+bc. xm shutdown [vm_name]
 
+example:
+
+bc. xm shutdown proddb
+
+* VM configuration file:
+
+bc. /OVS/running_pool/[vm_name]/vm.cfg
 
 h1. Block Attach/Detach
 
