--- a/index.textile
+++ b/index.textile
@@ -7,6 +7,7 @@ Quick Links:
 !(icon)/images/file.gif! "DB 11g":/jeos/db11g/db11g.html
 !(icon)/images/file.gif! "Emacs":training/emacs.html
 !(icon)/images/file.gif! "GIT":training/git.html
+!(icon)/images/file.gif! "Groovy & Gradle":training/java/groovy.html
 !(icon)/images/file.gif! "Latex":training/latex.html
 !(icon)/images/file.gif! "Linux":training/linux.html
 !(icon)/images/file.gif! "Lisp":training/lisp.html
