--- a/training/git.textile
+++ b/training/git.textile
@@ -357,3 +357,9 @@ bc.
 git commit -m"<commit_Message>"   # Command Format
 git commit -m"Removed testGetActivities from ServiceRequestTest"     # Command Example
 
+h1(#gitOnWindows). Using Git on Windows
+
+* Install cygwin adding the 'git' & 'openssh' packages when it comes time to select packages
+* Send me your public key generated from "Setup SSH":/training/ssh.html#keypair
+
+Then you can do the rest of the commands for Git specified above.
