--- a/index.textile
+++ b/index.textile
@@ -8,6 +8,7 @@ Quick Links:
 !(icon)/images/file.gif! "Emacs":training/emacs.html
 !(icon)/images/file.gif! "GIT":training/git.html
 !(icon)/images/file.gif! "Groovy & Gradle":training/java/groovy.html
+!(icon)/images/file.gif! "Java":training/java/java.html
 !(icon)/images/file.gif! "Latex":training/latex.html
 !(icon)/images/file.gif! "Linux":training/linux.html
 !(icon)/images/file.gif! "Lisp":training/lisp.html
