--- a/training/lisp.textile
+++ b/training/lisp.textile
@@ -60,6 +60,19 @@ bc.
 
 h2. User Input
 
+h3. Streams
+
+h4. Out
+
+t is shorthand for the stream *standard-output*
+
+h4. In
+
+The variable *query-io* is a global variable (which you can tell
+because of the * naming convention for global variables) that contains
+the input stream connected to the terminal.
+
+
 h3. Strings 
 
 The variable *query-io* is a global variable (which you can tell
@@ -129,10 +142,14 @@ The @WITH-OPEN-FILE@ macro opens a file, binds the stream to a variable,
 executes a set of expressions, and then closes the file. It also makes
 sure the file is closed even if something goes wrong while evaluating
 the body. The list directly after @WITH-OPEN-FILE@ isn’t a function call
-but rather part of the syntax defined by @WITH-OPEN-FILE@. It contains
-the name of the variable that will hold the file stream to which
-you’ll write within the body of @WITH-OPEN-FILE@, a value that must be a
-file name, and then some options that control how the file is
+but rather part of the syntax defined by @WITH-OPEN-FILE@. 
+
+@out@ = It contains the name of the variable that will hold the file stream to
+which you’ll write within the body of @WITH-OPEN-FILE@,
+
+@filename@ = a value that must be a file name,
+
+and then some options that control how the file is
 opened. Here you specify that you’re opening the file for writing with
 @:direction :output@ and that you want to overwrite an existing file of
 the same name if it exists with @:if-exists :supersede@.
@@ -144,7 +161,6 @@ reader. The macro @WITH-STANDARD-IO-SYNTAX@ ensures that certain
 variables that affect the behavior of @PRINT@ are set to their standard
 values. You’ll use the same macro when you read the data back in to
 make sure the Lisp reader and printer are operating compatibly.
-
 
 bc. 
 (defun save-db (filename)
@@ -164,13 +180,33 @@ bc.
 
 This time you don’t need to specify :direction in the options to
 WITH-OPEN-FILE, since you want the default of :input. And instead of
-printing, you use the function READ to read from the stream in.
+printing, you use the function READ to read from the stream @in@.
 
 The @SETF@ macro is Common Lisp’s main assignment operator. It sets its first argument to
 the result of evaluating its second argument. So in @load-db@ the @*db*@ variable will contain the
 object read from the file, namely, the list of lists written by save-db. You do need to be careful
 about one thing—load-db clobbers whatever was in @*db*@ before the call. So if you’ve added
 records with add-record or add-cds that haven’t been saved with save-db, you’ll lose them.
+
+h2. List Processing 
+
+h3. REMOVE-IF-NOT
+
+The function @REMOVE-IF-NOT@ takes a predicate and a list and returns a list containing only
+the elements of the original list that match the predicate. In other words, it has removed all the
+elements that don’t match the predicate. However, @REMOVE-IF-NOT@ doesn’t really remove
+anything—it creates a new list, leaving the original list untouched. 
+
+h3. DOLIST
+
+The @DOLIST@ macro works by looping over all the elements of @*db*@ with
+the @DOLIST@ macro, binding each element to the variable cd in turn. For
+each value of cd, you use the @FORMAT@ function to print it.
+
+bc. 
+(defun dump-db ()
+ (dolist (cd *db*)
+  (format t "~{~a:~10t~a~%~}~%" cd)))
 
 h2. Other Commands
 
@@ -182,14 +218,7 @@ bc. (defun <function_name> <paren_list> <function>)
 
 bc. (defvar *data* nil)
 
-* DOLIST macro.  This function works by looping over all the elements of *db* with the DOLIST macro,
-binding each element to the variable cd in turn. For each value of cd, you use the FORMAT
-function to print it.
 
-bc. 
-(defun dump-db ()
- (dolist (cd *db*)
-  (format t "~{~a:~10t~a~%~}~%" cd)))
 
 
 * Loading a file full of lisp
